implemented jorge's comments

--- a/Appendices/Background_treatmenteffects.tex
+++ b/Appendices/Background_treatmenteffects.tex
@@ -206,6 +206,17 @@ afternoon snack all planned by a nutritionist.\footnote{\citet{Bryant_et_al_1987
 	
 Table~\ref{table:controlsubscharacteristics} shows baseline characteristics between the control-group subjects who were enrolled in alternative preschool and those who stayed at home. The control-group children who attended alternative preschool were marginally more advantaged, with the most stark difference being maternal employment. This is seen across genders, but is only significant for the female and pooled samples. The males who are enrolled in alternative preschool have mothers with higher IQ scores, but lower parental income indicating lack of spousal support, which is evident by the fewer number of fathers present in that same group. Those who were enrolled in alternative preschools also had more siblings.
 
+\begin{sidewaystable}[H]
+\centering
+\begin{threeparttable}
+\caption{Baseline Characteristics and Control Substitution}\label{table:controlsubscharacteristics}
+\input{output/abccare_baseline_P}
+\begin{tablenotes}
+\item \footnotesize \textbf{Note:} This table describes baseline characteristics for the children in the control group, by gender and by their enrollment in alternative childcare. The number of subjects in these groups are listed at the top of the table. Asymptotic standard errors are in parentheses. The reported $p$-values are from two-sided tests of difference of means. The means are bolded if the difference is significant at the 10\% level. In Table~\ref{tab:abccare-baseline}, we jointly test for baseline differences between males and females and between treatment- and control-group children, accounting for multiple hypotheses, and find that none of the $p$-values remain significant after this adjustment.
+\end{tablenotes}
+\end{threeparttable}
+\end{sidewaystable}
+
 Figure~\ref{fig:salmonella} shows enrollment by age and the average months of enrollment by age for the control-group children who enrolled in program alternatives. Enrollment increases with the age of children. Figure~\ref{fig:treatsubcare_2} shows the fraction of children enrolled in preschool by age. As control children age, they are more likely to enter childcare.
 
 \begin{sidewaysfigure}[!htbp]
