--- a/sections/5_gender-differences.tex
+++ b/sections/5_gender-differences.tex
@@ -1,14 +1,13 @@
 
 As the treatment effects reported in Section~\ref{sec:treatment-effects} show, there are gender differences in the patterns of positive and significant treatment effects. Similar gender differences have been seen in previous work. We summarize this previous work in Table~\ref{tab:litreview-table}. Our aggregating statistics and discussion of the counterfactual scenario allow for us to better summarize the gender differences and hint at other mechanisms that can be driving these differences in treatment effects.
 
-Figure~\ref{fig:ppositive} shows the estimated combining functions of the proportion of outcomes for which the estimated treatment effect is positive. We focus on the combining functions in this section to highlight the gender differences by counterfactual scenario. Appendix~\ref{appendix:results} has estimates of individual treatment effects as well as more estimated combining functions. Similar patterns in gender differences can be seen in these additional results as well.
+Figure~\ref{fig:ppositive} shows the estimated combining functions of the proportion of outcomes for which the estimated treatment effect is positive. We focus on the combining functions in this section to highlight the gender differences by counterfactual scenario. After dividing the sample by gender and take-up of alternative childcare, the other statistics loose power.\footnote{See Appendix~\ref{appendix:results} for estimates of individual treatment effects and additional specifications of combining functions.} 
 
-As we explain in Section~\ref{sec:parameters}, the null hypothesis is that the proportion of outcomes is equal to 50\%. Figure~\ref{fig:ppositivehome} displays the combining functions comparing ABC/CARE to those who stay at home. Figure~\ref{fig:ppositivealternative} displays the same comparing ABC/CARE to those who attended alternative childcare. Both of these estimates account for selection into the counterfactual scenario using matching, as described in Section~\ref{sec:parameters}.
+As we explain in Section~\ref{sec:parameters}, the null hypothesis is that the proportion of outcomes is equal to $0.500$. Figure~\ref{fig:ppositivehome} displays the combining functions comparing ABC/CARE to those who stay at home. Figure~\ref{fig:ppositivealternative} displays the analogous combining functions comparing ABC/CARE to those who attended alternative childcare. Both of these estimates account for selection into the counterfactual scenario using matching, as described in Section~\ref{sec:parameters}.
 
-Comparing ABC/CARE to those who stay at home (Figure~\ref{fig:ppositivehome}), a higher proportion of the treatment effects are positive for women than for men. The female proportion is 25 percentage points larger than the male proportion. While the female proportion is significantly larger than 50\%, the standard error male proportion crosses the 50\%. We cannot reject the null hypothesis that ABC/CARE had more positive treatment effects for men relative to staying at home. 
+Comparing ABC/CARE to those who stay at home (Figure~\ref{fig:ppositivehome}), a higher proportion of the treatment effects are positive for women than for men. While the female proportion is much larger than $0.500$, the male proportion is not. 
 
-Figure~\ref{fig:ppositivealternative} shows a different pattern comparing ABC/CARE to those who attended alternative childcare. Close to 75\% of the treatment effects are positive for men and we can reject the null hypothesis that ABC/CARE had more positive treatment effects for men relative to alternative childcare. For women, the proportion of positive treatment effects is similar to that comparing ABC/CARE to those who stay at home and is also statistically significantly different from 50\%. From these estimated combining functions, we can conclude that ABC/CARE was effective for men compared to alternative childcare, but not when compared to staying at home. ABC/CARE was effective for women regardless of the counterfactual scenario. 
-
+Figure~\ref{fig:ppositivealternative} shows a different pattern comparing ABC/CARE to those who attended alternative childcare. Close to 75\% of the treatment effects are positive for men. For women, the proportion of positive treatment effects is similar to that comparing ABC/CARE to those who stay at home. From these estimated combining functions, we can conclude that ABC/CARE was effective for men compared to alternative childcare, but not when compared to staying at home. ABC/CARE was effective for women regardless of the counterfactual scenario. 
 
 \begin{figure}[!htbp]
 \centering
@@ -27,9 +26,11 @@ Figure~\ref{fig:ppositivealternative} shows a different pattern comparing ABC/CA
 \textbf{Note:} Panel (a) displays the percentage of positive treatment effects in accordance with the parameter in Equation~\eqref{eq:cont1}---treatment vs. staying at home---by gender. Panel (b) is analogous for Equation~\eqref{eq:cont2}---treatment vs.\ alternative childcare. Standard errors are based on the empirical bootstrap distribution. The null hypothesis is that the proportions of positive treatment effects are greater than 50\%. For a full list of the estimated combining functions, see Appendix~\ref{appendix:results}. \\
 \end{figure}
 
-We next show the estimated combining functions disaggregated by outcome category in Figure~\ref{fig:cats-positive}. Figure~\ref{fig:cats-positivehome} displays the proportions comparing ABC/CARE to staying at home and Figure~\ref{fig:cats-positivealt} displays the proportions comparing ABC/CARE to alternative childcare. Consistent with Figure~\ref{fig:ppositive} and the treatment effects reported in Section~\ref{sec:treatment-effects}, the female proportions are greater than or equal to the male proportions. The exception to this pattern is for eduction outcomes comparing ABC/CARE to staying at home in which the male proportion is larger than the female proportion, although the standard errors of the proportions overlap indicating that the difference between the two is not statistically significant. 
+We next show the estimated combining functions disaggregated by outcome category in Figure~\ref{fig:cats-positive}. Figure~\ref{fig:cats-positivehome} displays the proportions comparing ABC/CARE to staying at home and Figure~\ref{fig:cats-positivealt} displays the proportions comparing ABC/CARE to alternative childcare. Consistent with Figure~\ref{fig:ppositive} and the treatment effects reported in Section~\ref{sec:treatment-effects}, the female proportions are greater than or equal to the male proportions. The exception to this pattern is for eduction outcomes comparing ABC/CARE to staying at home in which the male proportion is larger than the female proportion, although the standard error of male proportion indicates that there is much variation in the estimate. 
 
-Comparing the male proportions across counterfactual scenarios, we find that ABC/CARE is more effective compared to alternative childcare than compared to staying at home. The exceptions to this pattern are seen in HOME scores and education. The opposite pattern is seen for women. The female proportions are larger comparing ABC/CARE to staying at home than comparing ABC/CARE to alternative childcare. Although in aggregating across all outcome categories, ABC/CARE seems equally effective for women by counterfactual scenario, disaggregating reveals that there are some outcome categories for which the proportions comparing ABC/CARE to staying at home are larger than comparing ABC/CARE to alternative childcare. These categories include HOME scores, mental health, employment and income, and crime. These results indicate that ABC/CARE is more effective for women when compared to staying at home and more effective for men when compared to alternative childcare.
+Comparing the male proportions across counterfactual scenarios, we find that ABC/CARE is more effective compared to alternative childcare than compared to staying at home. The exceptions to this pattern are seen in HOME scores and education. The opposite pattern is seen for women. The female proportions are larger comparing ABC/CARE to staying at home than comparing ABC/CARE to alternative childcare. 
+
+Although in aggregating across all outcome categories, ABC/CARE seems equally effective for women by counterfactual scenario, disaggregating reveals that there are some outcome categories for which the proportions comparing ABC/CARE to staying at home are larger than comparing ABC/CARE to alternative childcare. These categories include HOME scores, mental health, employment and income, and crime. These results indicate that ABC/CARE is more effective for women when compared to staying at home and more effective for men when compared to alternative childcare.
 
 \begin{figure}[H]
  \centering
@@ -84,22 +85,17 @@ Comparing the male proportions across counterfactual scenarios, we find that ABC
 
 This difference suggests that boys and girls faced different situations in their counterfactual environments, especially in the home environments. Table~\ref{table:controlsubscharacteristics} summarizes the baseline characteristics by gender and counterfactual scenario. Approximately the same proportion of control-group girls attended alternative childcare (73\%)  as control-group boys (76\%). We confirm that the take-up of amount alternative childcare is similar across genders in Figure~\ref{figure:altgender}. Although slightly more boys attend more alternative childcare, this difference is small.
 
-Maternal employment of mothers of girls is the only statistically significant difference between those who stayed at home and those who attended alternative childcare. No girls who stayed at home had working mothers while 23\% of the girls who attended alternative childcare had working mothers. For boys, 14\% of those who stayed at home had working mothers while 29\% of those who attended alternative childcares had working mothers. As we show in Section~\ref{sec:treatment-effects}, ABC/CARE increases maternal income. It is also clear that control-group children who attend alternative childcare are more likely to have working mothers. Pooling genders, 26\% of those who attended alternative childcare had working mothers versus 8\% of those who stayed at home. Although the alternative childcares were not substitutes for ABC/CARE in terms of quality, educational offerings, or child outcomes, they did provide between 3 and 8 hours of childcare per day to allow the mothers to work (or continue working).
+Maternal employment of mothers of girls is the only statistically significant difference between those who stayed at home and those who attended alternative childcare. No girls who stayed at home had working mothers while 23\% of the girls who attended alternative childcare had working mothers. For boys, 14\% of those who stayed at home had working mothers while 29\% of those who attended alternative childcares had working mothers. 
 
-\begin{sidewaystable}[H]
-\centering
-\begin{threeparttable}
-\caption{Baseline Characteristics and Control Substitution}\label{table:controlsubscharacteristics}
-\input{output/abccare_baseline_P}
-\begin{tablenotes}
-\item \footnotesize \textbf{Note:} This table describes baseline characteristics for the children in the control group, by gender and by their enrollment in alternative childcare. The number of subjects in these groups are listed at the top of the table. Asymptotic standard errors are in parentheses. The reported $p$-values are from two-sided tests of difference of means. The means are bolded if the difference is significant at the 10\% level. In Table~\ref{tab:abccare-baseline}, we jointly test for baseline differences between males and females and between treatment- and control-group children, accounting for multiple hypotheses, and find that none of the $p$-values remain significant after this adjustment.
-\end{tablenotes}
-\end{threeparttable}
-\end{sidewaystable}
+As we show in Section~\ref{sec:treatment-effects}, ABC/CARE increases maternal income. It is also clear that control-group children who attend alternative childcare are more likely to have working mothers. Although the alternative childcares were not substitutes for ABC/CARE in terms of quality, educational offerings, or child outcomes, they did provide between 3 and 8 hours of childcare per day to allow the mothers to work (or continue working).
 
-The difference in maternal labor supply indicates that there is some special difference in the family characteristics of control-group boys who stayed at home relative to control-group boys who attended alternative care and control-group girls. The control-group boys who stayed at home also have older mothers, more fathers present, lower HRI scores, and more siblings than any of the other subgroups. Of course, these characteristics are interrelated. For example, having a father at home implies that the family income is higher. This is due to the father brining additional income rather than the presence of the father allowing the mother to work, given that the association between father's presence and maternal employment is weak. 
+The difference in maternal labor supply indicates that there is some special difference in the family characteristics of control-group boys who stayed at home relative to control-group boys who attended alternative care and control-group girls. The control-group boys who stayed at home also have older mothers, more fathers present, lower HRI scores, and more siblings than any of the other subgroups. 
 
-To formally test the differences in control-group girls and boys, we create a latent measure of socioeconomic disadvantage at baseline using the following variables: Mother's age, education, IQ, marital status, and employment, as well as number of children and father's presence at home. We assess how girls and boys fit into the overall distribution of this latent measure in the control group. Boys are disproportionately more advantaged than girls (Panel~\ref{figure:disadgender}). Because girls' families were more resource constrained if compared to their male counterparts, girls in the control group were taken care of in a more disadvantaged environment or went to lower-quality preschools. Thus, they benefited more than boys when compared to the next best alternative as perceived by their parents, as documented in Section~\ref{sec:treatment-effects}.
+These characteristics are interrelated. For example, having a father at home implies that the family income is higher. This is due to the father brining additional income rather than the presence of the father allowing the mother to work, given that the association between father's presence and maternal employment is weak. 
+
+To formally test the differences in control-group girls and boys, we create a latent measure of socioeconomic disadvantage at baseline using the following variables: Mother's age, education, IQ, marital status, and employment, as well as number of children and father's presence at home. We assess how girls and boys fit into the overall distribution of this latent measure in the control group. Boys are disproportionately more advantaged than girls (Panel~\ref{figure:disadgender}). 
+
+Because girls' families were more resource constrained if compared to their male counterparts, girls in the control group were taken care of in a more disadvantaged environment or went to lower-quality preschools. Thus, they benefited more than boys when compared to the next best alternative as perceived by their parents, as documented in Section~\ref{sec:treatment-effects}.
 
 Table~\ref{table:disadtests} uses the latent measure to test the difference in disadvantage across boys and girls. We reject the null of a common distribution of our measure of socioeconomic disadvantage across girls and boys (at baseline). In Panels~\ref{figure:disadgirls} and~\ref{figure:disadboys} of Figure~\ref{figure:socdis}, we further dissect socioeconomic disadvantage within genders, and provide the corresponding tests in Table~\ref{table:disadtests}.
 
@@ -117,4 +113,6 @@ Table~\ref{table:disadtests} uses the latent measure to test the difference in d
 \end{threeparttable}
 \end{table}
 
-Parents of more advantaged girls are more likely to send their daughters to alternative preschools. Parents of more advantaged boys are more likely to keep their sons at home. Thus, boys benefited more from treatment when compared to attending alternative childcare as opposed to staying at home where they faced a better environment. The opposite pattern holds for girls, although the differences between the estimates by counterfactual scenario are smaller for girls than for boys. This is consistent with Table~\ref{table:disadtests}, which shows that while the selection into alternative childcare statistically significantly differs by family disadvantage for boys, it is not statistically significant for girls. 
+Parents of more advantaged girls are more likely to send their daughters to alternative preschools. Parents of more advantaged boys are more likely to keep their sons at home. Thus, boys benefited more from treatment when compared to attending alternative childcare as opposed to staying at home where they faced a better environment. The opposite pattern holds for girls, although the differences between the estimates by counterfactual scenario are smaller for girls than for boys. 
+
+This is consistent with Table~\ref{table:disadtests}, which shows that while the selection into alternative childcare statistically significantly differs by family disadvantage for boys, it is not statistically significant for girls. 
