--- a/sections/Comments/EER-Referee-Comments.tex
+++ b/sections/Comments/EER-Referee-Comments.tex
@@ -33,7 +33,7 @@ An obvious challenge to establishing these causal effects is that the childcare 
 
 
 \item Related to the previous point, it is unclear whether one could attribute a difference in outcomes solely to a child attending a lower-quality childcare center. Presumably the ``treatment'' also involves changes in other inputs as the decision to send a child to childcare involves monetary costs (while ABC/CARE and home care presumably are free), and may coincide with increased maternal employment. So what is estimated here is the effect of using lower-quality childcare center combined with changes in parental income and time inputs into child development, which could be compensatory or complimentary. Are the negative effects for boys due to lower quality childcare, or do they capture income effects?
- \textbf{Yes it is true that ABC/CARE is free for the families. Unfortunately, we do not have the breadth of data and sample to be able to disentangle income effects from direct effects of the program. It is true, as we show in Table 5, that the mothers of the control-group girls who stay at home do not work whereas 14\% of the control-group boys who stay at home have a mother who works. This is consistent with the fact that more boys than girls have a father present, both in the data and as a documented pattern (e.g., Dahl and Moretti, 2008). This could be one mechanism through which the decision is made and could have implications for quality of home care. We have expanded on this greatly throughout the paper to link family characteristics, selection into alternative care, and the gender differences in the treatment effects. This is especially highlighted in Section 5. In addition, the concept that we have on the quality of the alternative center-based care come from auxiliary historical documents (e.g., state and federal standards), rather than self-report or direct observation. We added this in-text. [JJH: We should estimate Pr(home $|$ father, etc.) by gender and report.][We now do this in Table 6 and find that there is a significant difference for boys.]}
+ \textbf{Yes it is true that ABC/CARE is free for the families. Unfortunately, we do not have the breadth of data and sample to be able to disentangle income effects from direct effects of the program. It is true, as we show in Table A.4, that the mothers of the control-group girls who stay at home do not work whereas 14\% of the control-group boys who stay at home have a mother who works. This is consistent with the fact that more boys than girls have a father present, both in the data and as a documented pattern (e.g., Dahl and Moretti, 2008). This could be one mechanism through which the decision is made and could have implications for quality of home care. We have expanded on this greatly throughout the paper to link family characteristics, selection into alternative care, and the gender differences in the treatment effects. This is especially highlighted in Section 5. In addition, the concept that we have on the quality of the alternative center-based care come from auxiliary historical documents (e.g., state and federal standards), rather than self-report or direct observation. We added this in-text. [JJH: We should estimate Pr(home $|$ father, etc.) by gender and report.][We now do this in Table 5 and find that there is a significant difference for boys.]}
  
  Does the choice perhaps reflect the absence of good alternative informal childcare by the parent(s), grandparents and friends, relative to those who opt for home care? 
  \textbf{We attempted to use the presence of relatives as an instrument for selection into alternative center-based care. This is in Appendix E.1. There was an extensive neighborhood survey done when the ABC subjects (not CARE, unfortunately) were entering kindergarten. This included a more expansive enumeration of family in the area and allowed us to isolate which subjects had a grandparent in the area. In addition to this measure, we also used the survey information (available in ABC and CARE) on people who lived in the household to try to capture opportunity for home care. Using different combinations of these weaker instruments and a more plausibly exogenous one (being born in the fall, which would allow for easy enrollment into center-based care if following the academic year). We present various specifications in the appendix. The IV results are pretty comparable to the main results but less precise.}
@@ -102,13 +102,13 @@ Also, many of the outcomes are highly-gendered adult behaviors, such as employme
 
 Second, the manuscript does not offer theories or explanations of how effects might have occurred in different domains; it focuses instead on the summary measures. \textbf{By adding the average effect sizes, the results are more comparable across different domains. We removed the summary of individual measures from the main paper because it was a selection of outcomes rather than something comprehensive. In the description of results in Sections 4 and 5, we do more to offer suggestions to explain certain effect sizes.}
 
-The main area where it does dig deeper---gender differences in the benefits of the child care intervention relative to either home care or alternative care---doesn't lead to a convincing result, because the manuscript doesn't establish the comparability or representativeness of the comparison groups. The manuscript makes numerous statements about the inferiority of alternative child care for boys, but it hasn't made a strong case. \textbf{We expanded the explanations of the control group, referencing more explicitly Table 5, which describes the baseline characteristics of the control-group children by selection into alternative care setting. We also explained in more detail the process of recruiting and randomizing the subjects. This helps establish that the sample reflected the children from disadvantaged families in the Chapel Hill area. Finally, the selection into home care or alternative center-based care is not randomized, as you mention. We included more explanation in the paper explicitly saying this and better explaining the assumptions of the methods we use to account for this selection. We aim for this expanded explanation to further support the analysis of results comparing ABC/CARE to alternative care settings by gender.}
+The main area where it does dig deeper---gender differences in the benefits of the child care intervention relative to either home care or alternative care---doesn't lead to a convincing result, because the manuscript doesn't establish the comparability or representativeness of the comparison groups. The manuscript makes numerous statements about the inferiority of alternative child care for boys, but it hasn't made a strong case. \textbf{We expanded the explanations of the control group, referencing more explicitly Table A.4, which describes the baseline characteristics of the control-group children by selection into alternative care setting. We also explained in more detail the process of recruiting and randomizing the subjects. This helps establish that the sample reflected the children from disadvantaged families in the Chapel Hill area. Finally, the selection into home care or alternative center-based care is not randomized, as you mention. We included more explanation in the paper explicitly saying this and better explaining the assumptions of the methods we use to account for this selection. We aim for this expanded explanation to further support the analysis of results comparing ABC/CARE to alternative care settings by gender.}
 
 \subsection*{Gender Differences}
 
 The manuscript convincingly documents that there are many differences in outcomes from high-quality child care between boys and girls. The text documents treatment effects for many adult outcomes and shows that women have better treatment outcomes for education and employment, while men have better treatment outcomes for drug use, blood pressure, and hypertension. Some of the gender differences in health outcomes had previously been reported by Campbell et al. (2014) and other outcomes have been reported before.
 
-The manuscript glosses over differences in the patterns of results. For example, it summarizes the results in Table 6 by writing, ``The general pattern is that male results are stronger than female results in the control group. The pattern is generally reversed in the treatment group.'' Well, yes, but it's still the case that men's treatment effects were better than women's treatment effects for many outcomes (age 5 IQ, college graduation, labor income, and all four health measures) and indistinguishable for a few others. The manuscript formalizes this approach with its combining functions and statistically confirms that there are more significant positive treatment effects for girls than boys. However, these analyses continue to show that there are many positive treatment effects for boys. \textbf{There are indeed many positive treatment effects for boys. Statements like the one you highlighted have been deleted or modified to be more nuanced (e.g., Section 4). We have also expanded references to the companion cost-benefit analysis, in which the weighted treatment effects reveal that the social returns for males are higher than those for females.}
+The manuscript glosses over differences in the patterns of results. For example, it summarizes the results in Table 5 by writing, ``The general pattern is that male results are stronger than female results in the control group. The pattern is generally reversed in the treatment group.'' Well, yes, but it's still the case that men's treatment effects were better than women's treatment effects for many outcomes (age 5 IQ, college graduation, labor income, and all four health measures) and indistinguishable for a few others. The manuscript formalizes this approach with its combining functions and statistically confirms that there are more significant positive treatment effects for girls than boys. However, these analyses continue to show that there are many positive treatment effects for boys. \textbf{There are indeed many positive treatment effects for boys. Statements like the one you highlighted have been deleted or modified to be more nuanced (e.g., Section 4). We have also expanded references to the companion cost-benefit analysis, in which the weighted treatment effects reveal that the social returns for males are higher than those for females.}
 
 The manuscript finds differences across many domains. But it's not clear that this is helpful. For example, how do we compare that girls had significantly better home scores at age 1.5 while boys didn't but boys had better labor incomes at 30 while girls didn't. The analysis seems worthwhile within domains of closely related measures but not across domains. More discussion and analysis of Figure 4 (and similar comparisons) would be a better way to go. \textbf{We edited the description of results to focus more on relating treatment effects on closely related outcomes. The effect sizes also help compare across domains.}
 
@@ -118,7 +118,7 @@ One piece of evidence that the counts may not be that valuable come from the rep
 
 The focus of the manuscript turns to the type of control. The numbers of significantly positive treatment effects for girls are mostly similar regardless of the type of control situation, but, there are more differences in the counts for boys when the control is alternative child care rather than home care. Again, however, there are exceptions in the patterns. The treatment for boys is stronger for the home care comparison group for health but stronger for the alternative care group for cognitive skills, parenting, education/employment/income. There is no substantive discussion about why these different results should occur. \textbf{We changed much of the paper to better analyze why the effects differ by gender and alternative environment. We now present evidence that (1) the control-group girls were more disadvantaged at baseline than the control-group boys, (2) more advantaged control-group boys stay at home, (3) more advantaged control-group girls attend alternative preschools. This selection pattern helps explain the control situation. The exceptions to the patterns in the new presentation of results are discussed in Section 5. We redid this analysis to address this concern that the connection between the selection into alternative preschools and the treatment effects were not developed. Now, these are connected and we find gender differences in the selection process that are consistent with the gender differences in the treatment effects.}
 
-The argument about the inferiority of alternative care seems to stem mainly from the higher count of positive treatment effects for the alternative care control than the home care control. However, these counts are similar to the counts for girls under each of the control situations. So this doesn't seem to provide strong evidence of gender differences in the harms associated with alternative care. Rather it looks like there is something unique about the home care that the boys received. \textbf{This is an insightful point that there could be a substantive difference in the care that boys received outside of ABC/CARE. Our new analysis addresses this directly by examining the baseline disadvantage and how that differs by gender. We present evidence to support what you intuited---that there is something different about the home care between boys and girls. We extrapolated this to differences in alternative preschools as well given that control-group girls are in more resource-constrained environments than control-group boys (see Table 6). The full discussion of this is in Section 5. [JJH: This is a great point. Can we hammer away at home environments? More fathers at home can explain.][We added a lot on the baseline home environments to help explain the counterfactual scenarios. We document three things: (1) boys are more advantaged than girls, (2) more advantaged boys stay at home than disadvantaged boys, (3) more advantaged girls attend alternative preschools than disadvantaged girls. This helps explain the gender differences in the estimates by counterfactual scenario.}
+The argument about the inferiority of alternative care seems to stem mainly from the higher count of positive treatment effects for the alternative care control than the home care control. However, these counts are similar to the counts for girls under each of the control situations. So this doesn't seem to provide strong evidence of gender differences in the harms associated with alternative care. Rather it looks like there is something unique about the home care that the boys received. \textbf{This is an insightful point that there could be a substantive difference in the care that boys received outside of ABC/CARE. Our new analysis addresses this directly by examining the baseline disadvantage and how that differs by gender. We present evidence to support what you intuited---that there is something different about the home care between boys and girls. We extrapolated this to differences in alternative preschools as well given that control-group girls are in more resource-constrained environments than control-group boys (see Table 5). The full discussion of this is in Section 5. [JJH: This is a great point. Can we hammer away at home environments? More fathers at home can explain.][We added a lot on the baseline home environments to help explain the counterfactual scenarios. We document three things: (1) boys are more advantaged than girls, (2) more advantaged boys stay at home than disadvantaged boys, (3) more advantaged girls attend alternative preschools than disadvantaged girls. This helps explain the gender differences in the estimates by counterfactual scenario.}
 
 \subsection*{Selection into Home Care and Alternative Care}
 
@@ -145,7 +145,7 @@ A particular concern is that with such a modest initial sample and with the gend
  \subsection*{Minor Points}
  \begin{itemize}
 \item P. 17, manuscript reports that treatment increases girls' college completion by 13 percentage points, but the corresponding figures are dropped from Table 5. \textbf{This was a typo (it should have said that high school completion increased by 13 percentage points). We have removed those tables.}
-\item Table A.5, is ``Mother Works'' a simple dummy variable? I can't determine how you arrived at the percentages listed in the table if it is. \textbf{Yes, it is a dummy variable. Most of the mothers in the sample did not work because they were in school. This is why the percentages in the table are so low. We now clarify this. We also moved this table in-text to be Table 5.}
+\item Table A.5, is ``Mother Works'' a simple dummy variable? I can't determine how you arrived at the percentages listed in the table if it is. \textbf{Yes, it is a dummy variable. Most of the mothers in the sample did not work because they were in school. This is why the percentages in the table (A.4) are so low. We now clarify this.}
  \end{itemize}
  
  \clearpage
@@ -179,7 +179,7 @@ Approach aside, the authors seem to be doing a similar dissection of counterfact
 \begin{enumerate}
 \item I would recommend being clearer about what is meant by early education ``quality'' in this paper. Is it simply the cost of the program or in resources (``structural quality'')?  Is it something about interactions between caregivers and children (``process quality'')? I don't think that any process quality measures are available for the ABC or CARE interventions, but discussions of quality in early intervention have evolved, and the text should reflect this. \textbf{We added more explanation about the quality of ABC/CARE and the alternatives throughout, but especially in the data section. The vocabulary of process and structural quality is useful and we incorporated this citing several papers that study the relationship between different aspects of the two. You are correct that there are no measures of process quality in ABC/CARE, let alone for the control-group subjects who attended alternative care. We expanded more on the aspects of quality that we do know about to argue that the quality in ABC/CARE was high, especially compared to the other programs during that time.}
 \item Figure 1 is troubling, in that it suggests that there is a lack of balance in observables across the control and treatment groups despite randomization. I think it would be helpful to see more discussion of the validity of randomized variation among non-attriters in the main text. (Relatedly, I don't think that dropouts post-randomization are not a problem, as seems to be implied in footnote 9.)  \textbf{That figure showed father's presence over time even after randomization. The pattern reflects a more widely documented trend that parents stay together more when the child is a son rather than a daughter. At randomization, the experimental groups were balanced in this variable and other variables related to disadvantage. Unfortunately, the exact randomization protocol is not documented, i.e., we do not know exactly what variables were used to match subjects and how this match occurred. To clarify the baseline characteristics, we replaced Figure 1 with Table 3. This shows the male/female and treatment/control differences at baseline. We also included more in-text explanation. Finally, our new analysis of the counterfactual scenarios relies on displaying differences in baseline characteristics by gender. The fact that girls are more disadvantaged than boys at baseline helps explain the differences in treatment effects and the differences in alternative options for the control group.}
-\item Likewise, it would be helpful to see differences in observable characteristics between control children who attended and did not attend alternative childcare. \textbf{This is reported in Table 5. We expanded the explanation of it in text in order to speak to this concern. The main difference is that for control-group girls, working mothers always place them in alternative care. For control-group boys, working mothers do not always do this, most likely related to the fact that more fathers are present for boys than for girls.}
+\item Likewise, it would be helpful to see differences in observable characteristics between control children who attended and did not attend alternative childcare. \textbf{This is reported in Table A.4. We expanded the explanation of it in-text in order to speak to this concern. The main difference is that for control-group girls, working mothers always place them in alternative care. For control-group boys, working mothers do not always do this, most likely related to the fact that more fathers are present for boys than for girls.}
 \item Presenting estimates by gender and family background, as is done in section 5, doesn't seem advisable given the very small sample sizes. \textbf{We have removed this analysis. }
 \item Needing clarification:
 \begin{enumerate}
