--- a/sections/5_gender-differences.tex
+++ b/sections/5_gender-differences.tex
@@ -1,7 +1,7 @@
 
 As the treatment effects reported in Section~\ref{sec:treatment-effects} show, there are gender differences in the patterns of positive and significant treatment effects. Similar gender differences have been seen in previous work. We summarize this previous work in Table~\ref{tab:litreview-table}. Our aggregating statistics and discussion of the counterfactual scenario allow for us to better summarize the gender differences and hint at other mechanisms that can be driving these differences in treatment effects.
 
-Figure~\ref{fig:ppositive} shows the estimated combining functions of the proportion of outcomes for which the estimated treatment effect is positive. We focus on the combining functions in this section to highlight the gender differences by counterfactual scenario. After dividing the sample by gender and take-up of alternative childcare, the other statistics loose power.\footnote{See Appendix~\ref{appendix:results} for estimates of individual treatment effects and additional specifications of combining functions.} 
+Figure~\ref{fig:ppositive} shows the estimated combining functions of the proportion of outcomes for which the estimated treatment effect is positive. We focus on the combining functions in this section to highlight the gender differences by counterfactual scenario. After dividing the sample by gender and take-up of alternative childcare, the other statistics do not have sufficient power.\footnote{See Appendix~\ref{appendix:results} for estimates of individual treatment effects and additional specifications of combining functions.} 
 
 As we explain in Section~\ref{sec:parameters}, the null hypothesis is that the proportion of outcomes is equal to $0.500$. Figure~\ref{fig:ppositivehome} displays the combining functions comparing ABC/CARE to those who stay at home. Figure~\ref{fig:ppositivealternative} displays the analogous combining functions comparing ABC/CARE to those who attended alternative childcare. Both of these estimates account for selection into the counterfactual scenario using matching, as described in Section~\ref{sec:parameters}.
 
